chore: delete unused files

--- a/.env-example
+++ b/.env-example
@@ -8,10 +8,5 @@
 
 DATABASE_URL=
 
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USER=
-MAIL_PASSWORD=
-MAIL_DEFAULT_EMAIL=
-MAIL_DEFAULT_NAME=
-MAIL_SECURE=
+AUTH_JWT_SECRET=
+AUTH_JWT_TOKEN_EXPIRES_IN=
